2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-04-06	Ralf Corsépius	<ralf.corsepius@rtems.org>

	* bsp_specs: Remove lib (Now expected to exist in GCC).

2007-03-12	Joel Sherrill <joel@OARcorp.com>

	* clock/clock.c, console/console.c, ide/pcmcia_ide.c, irq/irq.c,
	irq/irq.h, irq/irq_asm.S, irq/irq_init.c, nvram/nvram.c,
	nvram/nvram.h, slicetimer/slicetimer.c, startup/bspstart.c,
	vectors/vectors.h, vectors/vectors_init.c: Correct license URL and/or
	fix mistake in copyright notice. Both of these mistakes appear to be
	from code submitted after these changes were made previously.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2007-03-10	Joel Sherrill <joel@OARcorp.com>

	PR 1227/bsps
	* include/bsp.h: Remove MAX_LONG_TEST_DURATION and
	MAX_SHORT_TEST_DURATION. They are obsolete and unused.

2007-01-23      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c: corrected typo in UART error handler (usage
	* of ISR_PE instead of ISR_OE)
	
2006-12-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bestcomm/load_task.c: Remove bogus casts.
	* network_5200/network.c: Use ioctl_command_t as arg to ioctl functions.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-15	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Merge c_rtems_main() into boot_card(). This eliminated a
	file and simplified initialization.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove superfluous -DASM.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clock.c, console/console.c, ide/pcmcia_ide.c,
	ide/pcmcia_ide.h, irq/irq.c, irq/irq.h, irq/irq_asm.S,