@@ -1,3 +1,8 @@
+2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* mscan/mscan.c: Use size_t for message sizes. Remove absurd type
+	  cast.
+
 2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* bsp_specs: Remove qrtems_debug.
